- migrate payment service to kotlin (not tested)